k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pipeline-devops
  labels: { app.kubernetes.io/part-of: pipeline-devops }
