k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: pipeline-devops
  labels: { app: pipeline-devops-app }
spec:
  type: ClusterIP
  selector: { app: pipeline-devops-app }
  ports: [{ name: http, port: 80, targetPort: http }]
