k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app
  namespace: pipeline-devops
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: app.localtest.me        # resuelve a 127.0.0.1; en GKE se cambia por el dominio real
      http:
        paths:
          - path: /
            pathType: Prefix
            backend: { service: { name: app, port: { name: http } } }
